# chronos

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pr-check.yml  release.yml
src/: App.tsx  lib.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: lance.rs  mod.rs  pipeline.rs  sync.rs
src-tauri/src/core/embed/: mod.rs
src-tauri/src/core/encryption/: encryption.rs
src-tauri/src/core/ipc/: graph.rs  health.rs  insights.rs  mod.rs  pipeline.rs  settings.rs  vault.rs
src-tauri/src/core/kuzu/: client.rs  mod.rs  schema.rs
src-tauri/src/core/layout/: mod.rs
src-tauri/src/core/minimax/: budget.rs  client.rs  config.rs  gemini.rs  mod.rs  router.rs
src-tauri/src/core/qdrant/: client.rs  collections.rs  mod.rs
src-tauri/src/core/scheduler/: mod.rs
src-tauri/src/core/system/: mod.rs
src/components/AppShell/: AppShell.tsx
src/components/BrainPulseDashboard/: BrainPulseDashboard.tsx
src/components/Dashboard/: Dashboard.tsx
src/components/GraphView/: GraphView.tsx
src/components/Settings/: Settings.tsx
src/components/SynergyStream/: SynergyStream.tsx
src/components/TimelineView/: TimelineView.tsx
src/core/: lance.rs  pipeline.rs
src/core/embed/: mod.rs
src/hooks/: useTauri.ts
src/styles/: index.css
src/types/: chronos.ts
