[package]
name = "chronos"
version = "0.1.0"
edition = "2021"

[lib]
name = "chronos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chronos"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zeroize = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# === Phase B: Candle Embedder ===
# candle-core: Low-level tensor operations (no GPU needed for inference)
# candle-nn: Neural network layers (Transformer, Linear, etc.)
# candle-transformers: BERT model implementation for sentence embeddings
# hf-hub: Download model weights + tokenizer from HuggingFace at runtime
# tokenizers: Fast BERT tokenizer (BPE-based)
# NOTE: All are pure Rust — no C++ linking required.
candle-core = "0.10"
arrow-schema = "57"
futures = "0.3"
futures-util = "0.3"
arrow-array = "57"
candle-nn = "0.10"
candle-transformers = "0.10"
hf-hub = "0.4"
tokenizers = "0.22"

# === Phase A: Embedded AI Stack ===
# lancedb: Serverless embedded vector DB (Rust-native, no server)
# Supports 384-dim vectors natively.
lancedb = "0.27"
