[package]
name = "chronos"
version = "0.1.0"
edition = "2021"

[lib]
name = "chronos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chronos"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zeroize = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# === Phase A: Embedded AI Stack ===
# lancedb: Serverless embedded vector DB (Rust-native, no server)
# Supports 384-dim vectors natively. Edition 2024 requires rust 1.91+ (met: 1.94.1).
# Note: hnswlib-rs was blocked — pulls corenn-kernels which requires nightly Rust.
lancedb = "0.27"

# fastembed: BLOCKED — corenn-kernels (nightly-only, #![feature(f16)])
# Embedding generation deferred to Phase B. Pipeline stubs with 384-dim placeholder.
# Phase B will implement via candle + local ONNX model or alternative stable crate.
